# Fast-Mass-Spring

./: CMakeLists.txt  README.md
ClothSimulation/: MassSpringSolver.cpp  MassSpringSolver.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UserInteraction.cpp  UserInteraction.h  main.cpp
ClothSimulation/shaders/: basic.vshader  phong.fshader  pick.fshader
